--- a/src/index.css
+++ b/src/index.css
@@ -1,207 +1,282 @@
-*{
-  margin:0;
-  padding:0;
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
-body{
+body {
   overflow-x: hidden;
 }
+.image {
+  height: 500px;
+  width: 95%;
+  margin-left: 15px;
+  margin-right: 10px;
+  padding: 5x;
+}
+.headingname{
+  /* margin-top:40%; */
+  color: rgb(236,183,10);
+  font-size: 50px;
+}
 
-.main_div{
-  width:100vw;
+.main_div {
+  width: 100vw;
   /* height:100vh; */
   /* overflow-y: scroll; */
 }
-.top_div{
-  width:100%;
-  height:80px;
-  color:#fff;
-  background:#0F1103;
-  display:flex;
-  flex-direction:row;
+.top_div {
+  width: 100%;
+  height: 80px;
+  color: #fff;
+  background: #0f1103;
+  display: flex;
+  flex-direction: row;
   justify-content: flex-start;
 }
-#logo{
-  width:80px;
-  height:60px;
-   /* background-color: red; */
-   background:#000;
-  margin:10px;
-  padding:15px;
+#logo {
+  width: 80px;
+  height: 60px;
+  /* background-color: red; */
+  background: #000;
+  margin: 10px;
+  padding: 15px;
   text-align: center;
 }
-.nav_bar{
-  height:60px;
-  width:40%;
+.nav_bar {
+  height: 60px;
+  width: 40%;
   /* background:green; */
   /* background:#FAFCEE; */
   text-transform: capitalize;
   font-size: 0.8rem;
-  margin:20px;
-  padding:10px;
-  display:flex;
+  margin: 20px;
+  padding: 10px;
+  display: flex;
   text-align: center;
   justify-content: space-between;
+  /* box-shadow:20px 30px 28px -18px rgba(0,0,0,0.6); */
 }
-.image_div_1{
- width:100%;
- height:720px;
- /* background: blue; */
- background:#FAFCEE;
- padding:20px;
- display:flex;
- flex-direction: row;
- text-align: center;
- justify-content: center;
+.gallery {
+  height: 1600px;
+  width: 100%;
 }
-img{
-  border-radius: 20px;
-  box-shadow:2px 10px 10px -6px #000;
-}
-.img_1{
-  margin:10px;
+.memory {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  font-weight: 600;
+  font-size: 17px;
+  margin-top: 25px;
   text-align: justify;
 }
-.img_1:hover{
-  box-shadow:10px 30px 28px -18px rgba(0,0,0,0.6);
-  transform:scale(1.05,1.05);
+#gallerydiv {
+  height: 700px;
+  margin: 30px;
+}
+#paragraphmemo {
+  height: 150px;
+  margin: 30px 50px 20px 50px;
+}
+#paragraph {
+  /* width:350px; */
+  height: 600px;
+  margin: 30px;
+}
+.image_div_1 {
+  width: 100%;
+  height: 720px;
+  /* background: blue; */
+  background: #fafcee;
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  justify-content: center;
+}
+img {
+  border-radius: 20px;
+  box-shadow: 2px 10px 10px -6px #000;
+}
+.img_1 {
+  margin: 10px;
+  text-align: justify;
+}
+.img_1:hover {
+  box-shadow: 10px 30px 28px -18px rgba(0, 0, 0, 0.6);
+  transform: scale(1.05, 1.05);
   border-radius: 20px;
 }
-#para{
-  width:250px;
-  height:350px;
-  padding:20px;
+#para {
+  width: 250px;
+  height: 350px;
+  padding: 20px;
   /* color:#fff; */
-  color:#000;
+  color: #000;
 }
-.gallery_div{
- width:100%;
- height:550px;
- /* background: yellow; */
- background:#FAFCEE;
- display:flex;
- justify-content: center;
+.gallery_div {
+  width: 100%;
+  height: 500px;
+  /* background:#FAFCEE; */
+  display: flex;
+  justify-content: center;
+  background-image: url("images/img4.jpg");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-color: rgba(0, 0, 0, 0.7);
+  background-blend-mode: darken;
 }
-.img_4{
-  margin:auto;
-}
+/* #onion {
+  border-radius: 0;
+  box-shadow: none;
+  width: 100%;
+} */
+/* .img_4{
+  /* margin:auto; */
+/* }  
 /* .img_4:hover{
   box-shadow:10px 30px 28px -18px rgba(0,0,0,0.6);
   transform:scale(1.05,1.05);
   border-radius: 30px;
 } */
 
-.flash_1{
-  display:flex;
+.flash_1 {
+  display: flex;
   padding-left: 320px;
-  padding-top:50px;
+  padding-top: 50px;
   /* color:#fff; */
-  color:#000;
+  color: #000;
 }
-.flash_2{
-  display:flex;
+.flash_2 {
+  display: flex;
   padding-left: 320px;
-  padding-top:30px;
+  padding-top: 30px;
   /* color:#fff; */
-  color:#000;
+  color: #000;
 }
-.image_div_2{
-  width:100%;
-  height:700px;
+.image_div_2 {
+  width: 100%;
+  height: 700px;
   /* background:green; */
-  background:#FAFCEE;
-  padding:20px;
-  display:flex;
+  background: #fafcee;
+  padding: 20px;
+  display: flex;
   flex-direction: row;
   text-align: center;
   justify-content: center;
 }
-.img_2{
-  margin:10px;
+.img_2 {
+  margin: 10px;
   text-align: justify;
 }
-.img_2:hover{
-  box-shadow:10px 30px 28px -18px rgba(0,0,0,0.6);
-  transform:scale(1.05,1.05);
+.img_2:hover {
+  box-shadow: 10px 30px 28px -18px rgba(0, 0, 0, 0.6);
+  transform: scale(1.05, 1.05);
   border-radius: 20px;
 }
-#para1{
-  width:250px;
-  height:350px;
-  padding:20px;
-  color:#000;
+#para1 {
+  width: 250px;
+  height: 350px;
+  padding: 20px;
+  color: #000;
 }
-.social_media_part{
-  width:100%;
-  height:200px;
+.social_media_part {
+  width: 100%;
+  height: 200px;
 }
-.logo_part{
-  height:80px;
-  background:#ADBF97;
+.logo_part {
+  height: 80px;
+  background: #adbf97;
   /* background: grey; */
-  padding:20px;
-  display:flex;
+  padding: 20px;
+  display: flex;
   flex-direction: row;
   text-align: center;
   justify-content: center;
 }
-.img_3{
-  margin:20px;
+.img_3 {
+  margin: 20px;
 }
-.img_3 img:hover{
-  cursor:pointer;
-  box-shadow:10px 20px 18px -18px rgba(0,0,0,1);
-  transform:scale(0.5,0.5);
+.img_3 img:hover {
+  cursor: pointer;
+  box-shadow: 10px 20px 18px -18px rgba(0, 0, 0, 1);
+  transform: scale(0.5, 0.5);
 }
-.end_bar{
-  height:130px;
-  background:#ADBF97;
+.end_bar {
+  height: 130px;
+  background: #adbf97;
   /* margin:10px */
-  padding:55px;
-  display:flex;
+  padding: 55px;
+  display: flex;
   text-align: center;
-  justify-content:center;
+  justify-content: center;
 }
-.info_div{
-  width:500px;
-  display:flex;
+.info_div {
+  width: 500px;
+  display: flex;
   flex-direction: row;
   justify-content: space-evenly;
 }
-#proff1{
+#proff1 {
   text-align: center;
-  margin:10px;
+  margin: 10px;
 }
-.nav_hover{
-  color:whitesmoke;
+.nav_hover {
+  color: whitesmoke;
 }
-.nav_hover_1{
-  color:#000;
+.nav_hover_1 {
+  color: #000;
 }
-.nav_hover:hover{
- color:aqua;
- cursor:pointer;
- /* background-color: aqua; */
+.nav_hover:hover {
+  color: aqua;
+  cursor: pointer;
+  /* background-color: aqua; */
 }
-.nav_hover_1:hover{
-  color:whitesmoke;
-  cursor:pointer;
+.nav_hover_1:hover {
+  color: whitesmoke;
+  cursor: pointer;
 }
 
-
-@media(min-width:770px) and (max-width:940px){
-  .image_div_1,.image_div_2{
-      display:flex;
-      flex-wrap: wrap;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-     }
-     .top_div{
-         width:1000px;
-     }
+@media (min-width: 770px) and (max-width: 1050px) {
+  .image_div_1,
+  .image_div_2 {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .top_div {
+    width: 1000px;
+  }
+  .gallery_div {
+    width: 1000px;
+    height: 450px;
+  }
+  .gallery {
+    width: 1000px;
+    height: 2200px;
+  }
+  #gallerydiv {
+    height: 1200px;
+    width: 900px;
+    margin: 20px;
+  }
+  .social_media_part {
+    width: 1000px;
+    height: 200px;
+  }
+  #paragraph {
+    font-size: 20px;
+  }
+  #paragraphmemo {
+    font-size: 20px;
+    height:300px
+  }
+  #heading{
+    font-size: 35px;
+  }
 }
-@media(max-width:768px){
+@media (max-width: 768px) {
   /* .image_div_1,.image_div_2,.gallery_div{
       display:flex;
       flex-wrap: wrap;
@@ -210,83 +285,137 @@ img{
       align-items: center;
       background-size: 100% 100%;
  } */
- .gallery_div{
- width:auto;
- height:auto;
- display:flex;
- flex-direction: column;
- justify-content: center;
- text-align: center;
+ #heading{
+   font-size: 45px;
  }
- .image_div_1,.image_div_2{
-     width:750px;
-     height:auto;
-     display:flex;
-     flex-direction: column;
-     justify-content: center;
-     text-align: center;
- }
- .img_1,.img_2{
-     margin-left:2%;
-     margin-right: 2%;
-     margin-top:60px;
-     padding-top: 30px;
-     margin-bottom: 70px; 
-     width:800px;
-     height:1800px;
- }
- #peacock,#peacock_1{
-     width:700px;
-     height:1000px;
-     margin-left: 70px;
- }
+  .gallery_div {
+    width: 1000px;
+    height: 500px;
+    /* display:flex; */
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    /* text-align: center; */
+  }
+  .gallery {
+    width: 1000px;
+    height: 4000px;
+  }
+  #gallerydiv {
+    height: 600px;
+    width: 900px;
+    margin: 20px;
+  }
+  #paragraph {
+    font-size: 30px;
+  }
+  #paragraphmemo {
+    font-size: 30px;
+    height:600px;
+  }
+  .image_div_1,
+  .image_div_2 {
+    width: 750px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  .img_1,
+  .img_2 {
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-top: 60px;
+    padding-top: 30px;
+    margin-bottom: 70px;
+    width: 800px;
+    height: 1800px;
+  }
+  #peacock,
+  #peacock_1 {
+    width: 700px;
+    height: 1000px;
+    margin-left: 70px;
+  }
 
- #para,#para1{
-     margin-left: 90px;
-     width:600px;
-     font-size: 40px;
- }
- #proff1{
-     margin-top:40px;
-     height:100px;
-     font-size: 60px;
- }
- .flash_1,.flash_2{
+  #para,
+  #para1 {
+    margin-left: 90px;
+    width: 600px;
+    font-size: 40px;
+  }
+  #proff1 {
+    margin-top: 40px;
+    height: 100px;
+    font-size: 60px;
+  }
+  .flash_1,
+  .flash_2 {
     display: inline-block;
     font-size: 30px;
     /* width:1000px;height:200px; */
- }
- .top_div{
-     width:1000px;
-     height:200px;
-     display:flex;
-     /* flex-direction:column; */
-     justify-content: center;
-     font-size: 50px;
- }
- #logo{
-     margin:auto;
- }
- .nav_bar,.info_div{
-     font-size: 23px;
-     display:flex;
-     flex-direction: row;
-     justify-content: center;
-     text-align: center;
-     margin:auto;
-     /* padding:30px; */
- }
- .nav_hover,.img_3{
-     padding:15px;
- }
- .nav_hover_1{
-    margin:10px;
- }
- .end_bar,.logo_part{
-     height:150px;
-     width:1000px;
- }
- .img_3{
-     height:50px;
- }
+  }
+  .top_div {
+    width: 1000px;
+    height: 200px;
+    display: flex;
+    /* flex-direction:column; */
+    justify-content: center;
+    font-size: 50px;
+  }
+  #logo {
+    margin: auto;
+  }
+  .nav_bar,
+  .info_div {
+    font-size: 23px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-align: center;
+    margin: auto;
+    /* padding:30px; */
+  }
+  .nav_hover,
+  .img_3 {
+    padding: 15px;
+  }
+  .nav_hover_1 {
+    margin: 10px;
+  }
+  .end_bar,
+  .logo_part {
+    height: 150px;
+    width: 1000px;
+  }
+  .img_3 {
+    height: 50px;
+  }
+}
+@media(min-width:1048px){
+  #paragraphmemo{
+    font-size: 22px;
+    height:250px
+  }
+  #paragraph{
+    font-size: 18px;
+  }
+}
+
+.headingname{
+  animation:type 4s steps(31);
+  overflow: hidden;
+  white-space: nowrap;
+  animation-iteration-count: infinite;
+}
+@keyframes type{
+  0%{
+    width:0ch;
+  }
+  50%{
+    width:31ch;
+  }
+  100%{
+    width:0ch;
+  }
 }
