--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
     right: 32px;
     font-size: 3rem;
     color: #000;
+    color:#fff;
     z-index: 10;
     cursor: pointer;
     user-select: none;
@@ -29,6 +30,7 @@
     left: 32px;
     font-size: 3rem;
     color: #000;
+    color:#fff;
     z-index: 10;
     cursor: pointer;
     user-select: none;
@@ -57,5 +59,75 @@
         width:700px;
         height: 400px;
         border-radius: 10px;
+      }
+  }
+
+  .slider1 {
+    position: relative;
+    height: 850px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .image1 {
+    /* border:2px solid white; */
+    width: 584px;
+    height: 685px;
+    border-radius: 10px;
+  }
+  
+  .right-arrow1 {
+    position: absolute;
+    top: 50%;
+    right: 32px;
+    font-size: 3rem;
+    color: #000;
+    z-index: 10;
+    cursor: pointer;
+    user-select: none;
+  }
+  
+  .left-arrow1 {
+    position: absolute;
+    top: 50%;
+    left: 32px;
+    font-size: 3rem;
+    color: #000;
+    z-index: 10;
+    cursor: pointer;
+    user-select: none;
+  }
+  
+  .slide1 {
+    opacity: 0;
+    transition-duration: 1s ease;
+  }
+  
+  .slide1.active {
+    opacity: 1;
+    transition-duration: 1s;
+    transform: scale(1.08);
+  }
+
+  @media(min-width:770px) and (max-width:1050px){
+    .image {
+        width:800px;
+        height: 400px;
+        border-radius: 10px;
+      }
+  }
+  @media(max-width:768px){
+    .image1 {
+      height: 1000px;
+      width:750px;
+        border-radius: 10px;
+      }
+      .slider1 {
+        position: relative;
+        height: 1200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
   }
