--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 body {
   overflow-x: hidden;
 }
+
 .image {
   height: 500px;
   width: 95%;
@@ -15,10 +16,26 @@ body {
 }
 .headingname{
   /* margin-top:40%; */
+  /* padding-top:60px; */
+  margin-top:160px;
   color: rgb(236,183,10);
   font-size: 50px;
 }
-
+.family{
+  /* background-image:url("images/newimage.webp"); */
+  /* background-image: url("https://i.pinimg.com/originals/62/39/4d/62394d753859943e6a1a36443ef78795.gif"); */
+  /* background-image:url("https://camo.githubusercontent.com/65475c61a0b084c0f8aafef3cef5585752f6771b326c33a3a8c70e020c4afe6d/68747470733a2f2f692e70696e696d672e636f6d2f6f726967696e616c732f33302f62382f31372f33306238313734633666316130376530616639626366343166656333613566352e676966"); */
+  background-image:url("https://thumbs.gfycat.com/ForkedInexperiencedGrouse.webp");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.family1{
+  background-image:url("https://thumbs.gfycat.com/ForkedInexperiencedGrouse.webp");
+  /* background-image: url("https://i.pinimg.com/originals/62/39/4d/62394d753859943e6a1a36443ef78795.gif"); */
+  /* background-image:url("https://camo.githubusercontent.com/65475c61a0b084c0f8aafef3cef5585752f6771b326c33a3a8c70e020c4afe6d/68747470733a2f2f692e70696e696d672e636f6d2f6f726967696e616c732f33302f62382f31372f33306238313734633666316130376530616639626366343166656333613566352e676966"); */
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
 .main_div {
   width: 100vw;
   /* height:100vh; */
@@ -86,13 +103,19 @@ body {
   width: 100%;
   height: 720px;
   /* background: blue; */
-  background: #fafcee;
+  /* background: #fafcee; */
+  background:"#fff";
   padding: 20px;
   display: flex;
   flex-direction: row;
   text-align: center;
   justify-content: center;
 }
+.underline{
+  height:2px;
+  background-color: red;
+}
+
 img {
   border-radius: 20px;
   box-shadow: 2px 10px 10px -6px #000;
@@ -100,6 +123,9 @@ img {
 .img_1 {
   margin: 10px;
   text-align: justify;
+  /* border:2px solid rgba(0, 0, 0, 0.4); */
+  border:2px solid whitesmoke;
+  border-radius:7px;
 }
 .img_1:hover {
   box-shadow: 10px 30px 28px -18px rgba(0, 0, 0, 0.6);
@@ -157,7 +183,8 @@ img {
   width: 100%;
   height: 700px;
   /* background:green; */
-  background: #fafcee;
+  /* background: #fafcee; */
+  background: "#fff";
   padding: 20px;
   display: flex;
   flex-direction: row;
@@ -167,6 +194,9 @@ img {
 .img_2 {
   margin: 10px;
   text-align: justify;
+  /* border:2px solid rgba(0, 0, 0, 0.4); */
+  border:2px solid whitesmoke;
+  border-radius:7px;
 }
 .img_2:hover {
   box-shadow: 10px 30px 28px -18px rgba(0, 0, 0, 0.6);
@@ -235,8 +265,61 @@ img {
   color: whitesmoke;
   cursor: pointer;
 }
+.proffimage{
+    display:flex;
+    height:510px;
+}
+.imagediv{
+  height:350px;
+  width:20%;
+  margin: 30px;
+  margin-left:50px;
+}
+.imagediv img{
+  width: 350px;
+  height:400px;
+  /* margin-left :7% */
+}
+.infodiv1{
+  /* border: 2px solid rgba(0, 0, 0, 0.4); */
+  width:40%;
+  text-align: justify;
+  font-size: 20px;
+  margin:40px;
+  margin-left:60px;
+  height:300px;
+}
+.section{
+  font-size: 20px;
+}
 
 @media (min-width: 770px) and (max-width: 1050px) {
+  .family1{
+     width:1000px;
+  }
+  .proffimage{
+    height:550px;
+    width:1000px;
+  }
+  .imagediv{
+    height:450px;
+    width:35%;
+    margin: 30px;
+  }
+  .infodiv1{
+    width:500px;
+    font-size: 20px;
+    margin:40px;
+    height:500px;
+  }
+  
+  .section{
+    width:900px;
+    padding-left: 25px;
+    color:blue;
+    font-size: 25px;
+    text-align: justify;
+  }
   .image_div_1,
   .image_div_2 {
     display: flex;
@@ -277,6 +360,54 @@ img {
   }
 }
 @media (max-width: 768px) {
+  .flash_1 {
+    display: inline-block;
+    padding-left: 120px;
+    padding-top: 50px;
+    /* color:#fff; */
+    color: #000;
+  }
+  .flash_2 {
+    display: inline-block;
+    padding-left: 120px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    /* color:#fff; */
+    color: #000;
+  }
+  .proffimage{
+    display:block;
+    height:1550px;
+    width:1000px;
+  }
+  .imagediv{
+    height:600px;
+    margin: 30px;
+    border:none;
+  }
+  .imagediv img{
+    width: 600px;
+    height:600px;
+    margin-left :40%;
+  }
+  .main_div{
+    width:1000px;
+  }
+  .infodiv1{
+    width:900px;
+    font-size: 45px;
+    font-weight: bold;
+    margin:40px;
+    height:800px;
+  }
+  
+  .section{
+    width:900px;
+    padding-left: 25px;
+    color:blue;
+    font-size: 45px;
+    text-align: justify;
+  }
   /* .image_div_1,.image_div_2,.gallery_div{
       display:flex;
       flex-wrap: wrap;
@@ -400,6 +531,9 @@ img {
   #paragraph{
     font-size: 18px;
   }
+}
+.imagediv{
+  width:30%;
 }
 
 .headingname{
