--- a/src/index.css
+++ b/src/index.css
@@ -374,23 +374,32 @@ img {
 @media (max-width: 768px) {
   .flash_1 {
     display: inline-block;
-    padding-left: 120px;
-    padding-top: 50px;
+    /* padding-left: 120px; */
+    padding-left: 90px;
+    /* padding-top: 50px; */
+    padding-top: 30px;
     padding-bottom: 70px;
     /* color:#fff; */
     color: #000;
   }
   .flash_2 {
     display: inline-block;
-    padding-left: 120px;
-    padding-top: 120px;
-    padding-bottom: 50px;
+    /* padding-left: 120px; */
+    padding-left: 90px;
+    padding-top: 50px;
+    /* padding-top: 120px; */
+    /* padding-bottom: 50px; */
+    padding-bottom: 15px;
     /* color:#fff; */
     color: #000;
   }
   #flash_inside{
     margin-bottom:-35px;
-    margin-top: 30px;
+    margin-top: 15px;
+  }
+   #flash_inside1{
+    margin-bottom:15px;
+    margin-top: -10px;
   }
   .proffimage{
     display:block;
@@ -408,7 +417,8 @@ img {
     margin-left :40%;
   }
   .main_div{
-    width:1000px;
+    width:100%;
+    /* width:1000px; */
   }
   .infodiv1{
     width:900px;
@@ -434,11 +444,15 @@ img {
       background-size: 100% 100%;
  } */
  #heading{
-   font-size: 45px;
+   font-size: 25px;
+ }
+ .headingname{
+   font-size: 25px;
+   margin-top:120px
  }
   .gallery_div {
     width: 100%;
-    height: 500px;
+    height: 300px;
     /* display:flex; */
     /* flex-direction: column; */
     /* justify-content: center; */
@@ -462,7 +476,8 @@ img {
   }
   .image_div_1,
   .image_div_2 {
-    width: 750px;
+    /* width: 750px; */
+    width:100%;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -472,29 +487,35 @@ img {
   .img_1,
   .img_2 {
     margin-left: 8%;
-    /* margin-right: 2%; */
-    margin-top: 50px;
+    /* margin-top: 50px; */
     padding-top: 30px;
-    margin-bottom: 70px;
-    width: 800px;
-    height: 1000px;
+    /* margin-bottom: 70px; */
+    margin-bottom:-25px;
+    /* width: 800px; */
+    width:100%;
+    height:500px;
+    /* height: 1000px; */
     border: 0px;
     border-radius: 20px;
   }
   #peacock {
-    width: 720px;
-    height: 950px;
+    /* width: 720px; */
+    width:70%;
+    /* height: 950px; */
+    height:400px;
     margin-left: 35px;
-    border:4px solid white;
-    padding:4px;
+    border:2px solid white;
+    padding:2px;
     /* margin-left:70px; */
   }
   #peacock_1 {
-    width: 720px;
-    height: 950px;
+    /* width: 720px; */
+    width:70%;
+    /* height: 950px; */
+    height:400px;
     margin-left: 35px;
-    border:4px solid white;
-    padding:4px;
+    border:2px solid white;
+    padding:2px;
   }
 
   /* #para,
@@ -511,23 +532,27 @@ img {
   .flash_1,
   .flash_2 {
     display: inline-block;
-    font-size: 30px;
-    /* width:1000px;height:200px; */
+    /* font-size: 30px; */
+       font-size: 15px;
   }
   .top_div {
-    width: 1000px;
-    height: 200px;
+    /* width:1000px; */
+    width: 100%;
+    height: 90px;
+    /* height:200px; */
     display: flex;
     /* flex-direction:column; */
     justify-content: center;
-    font-size: 50px;
+    font-size: 22px;
+    /* font-size: 50px;; */
   }
   #logo {
     margin: auto;
   }
   .nav_bar,
   .info_div {
-    font-size: 23px;
+    /* font-size: 23px;; */
+    font-size: 11px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -536,19 +561,252 @@ img {
     /* padding:30px; */
   }
   #logoimg{
-    height:100px
+    height:50px;
+    margin-top:-10px;
+    border-radius: 7px;
   }
   .nav_hover,
   .img_3 {
     padding: 15px;
   }
   .nav_hover_1 {
-    margin: 10px;
+    margin: 6px;
+    margin-top:4px;
+    font-size: 20px;
   }
-  .end_bar,
+  .end_bar{
+      height: 100px;
+      /* width: 1000px; */
+      width:100%;
+  }
   .logo_part {
-    height: 150px;
+    height: 70px;
+    /* width: 1000px; */
+    width:100%;
+  }
+  .social_media_part {
+    width: 100%;
+    height: 180px;
+  }
+}
+@media (max-width: 482px) {
+  .flash_1 {
+    display: inline-block;
+    /* padding-left: 120px; */
+    padding-left: 90px;
+    /* padding-top: 50px; */
+    padding-top: 30px;
+    padding-bottom: 70px;
+    /* color:#fff; */
+    color: #000;
+  }
+  .flash_2 {
+    display: inline-block;
+    /* padding-left: 120px; */
+    padding-left: 90px;
+    padding-top: 50px;
+    /* padding-top: 120px; */
+    /* padding-bottom: 50px; */
+    padding-bottom: 15px;
+    /* color:#fff; */
+    color: #000;
+  }
+  #flash_inside{
+    margin-bottom:-35px;
+    margin-top: 5px;
+    font-size: 11px;
+  }
+   #flash_inside1{
+    margin-bottom:15px;
+    margin-top: -10px;
+  }
+  .proffimage{
+    display:block;
+    height:1550px;
+    width:1000px;
+  }
+  .imagediv{
+    height:600px;
+    margin: 30px;
+    border:none;
+  }
+  .imagediv img{
+    width: 600px;
+    height:600px;
+    margin-left :40%;
+  }
+  .main_div{
+    width:100%;
+    /* width:1000px; */
+  }
+  .infodiv1{
+    width:900px;
+    font-size: 45px;
+    font-weight: bold;
+    margin:40px;
+    height:800px;
+  }
+  
+  .section{
+    width:900px;
+    padding-left: 25px;
+    color:blue;
+    font-size: 45px;
+    text-align: justify;
+  }
+  /* .image_div_1,.image_div_2,.gallery_div{
+      display:flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-size: 100% 100%;
+ } */
+ #heading{
+   font-size: 25px;
+ }
+ .headingname{
+   font-size: 25px;
+   margin-top:120px
+ }
+  .gallery_div {
+    width: 100%;
+    height: 300px;
+    /* display:flex; */
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    /* text-align: center; */
+  }
+  .gallery {
     width: 1000px;
+    height: 4000px;
+  }
+  #gallerydiv {
+    height: 600px;
+    width: 900px;
+    margin: 20px;
+  }
+  #paragraph {
+    font-size: 30px;
+  }
+  #paragraphmemo {
+    font-size: 30px;
+    height:600px;
+  }
+  .image_div_1,
+  .image_div_2 {
+    /* width: 750px; */
+    width:100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  .img_1,
+  .img_2 {
+    margin-left: 8%;
+    /* margin-top: 50px; */
+    padding-top: 30px;
+    /* margin-bottom: 70px; */
+    margin-bottom:-25px;
+    /* width: 800px; */
+    width:100%;
+    height:400px;
+    /* height: 1000px; */
+    border: 0px;
+    border-radius: 20px;
+  }
+  #peacock {
+    /* width: 720px; */
+    width:70%;
+    /* height: 950px; */
+    height:300px;
+    margin-left: 25px;
+    border:2px solid white;
+    padding:2px;
+    /* margin-left:70px; */
+  }
+  #peacock_1 {
+    /* width: 720px; */
+    width:70%;
+    /* height: 950px; */
+    height:300px;
+    margin-left: 25px;
+    border:2px solid white;
+    padding:2px;
+  }
+
+  /* #para,
+  #para1 {
+    margin-left: 90px;
+    width: 600px;
+    font-size: 40px;
+  } */
+  #proff1 {
+    margin-top: 40px;
+    height: 100px;
+    font-size: 60px;
+  }
+  .flash_1,
+  .flash_2 {
+    display: inline-block;
+    /* font-size: 30px; */
+       font-size: 15px;
+  }
+  .top_div {
+    /* width:1000px; */
+    width: 100%;
+    height: 70px;
+    /* height:200px; */
+    display: flex;
+    /* flex-direction:column; */
+    justify-content: center;
+    font-size: 18px;
+    /* font-size: 50px;; */
+  }
+  #logo {
+    margin: auto;
+    margin-left: -3px;
+  }
+  .nav_bar,
+  .info_div {
+    /* font-size: 23px;; */
+    font-size: 8px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    text-align: center;
+    margin: auto;
+    /* padding:30px; */
+  }
+  #logoimg{
+    height:45px;
+    margin-top:-15px;
+    border-radius: 7px;
+  }
+  .nav_hover,
+  .img_3 {
+    padding: 15px;
+  }
+  .nav_hover_1 {
+    margin: 6px;
+    margin-top:4px;
+    font-size: 18px;
+  }
+  .end_bar{
+      height: 100px;
+      /* width: 1000px; */
+      width:100%;
+  }
+  .logo_part {
+    height: 60px;
+    /* width: 1000px; */
+    width:100%;
+  }
+  .social_media_part {
+    width: 100%;
+    height: 170px;
   }
 }
 @media(min-width:1048px){
