--- a/src/index.css
+++ b/src/index.css
@@ -404,36 +404,38 @@ img {
   }
   .proffimage{
     display:block;
-    height:1550px;
-    width:1000px;
+    height:900px;
+    width:100%;
+    padding-right: 15px;
   }
   .imagediv{
-    height:600px;
+    height:470px;
     margin: 30px;
     border:none;
   }
   .imagediv img{
-    width: 600px;
-    height:600px;
-    margin-left :40%;
+    height:450px;
+    margin-left :50%;
+    width:300px;
   }
   .main_div{
     width:100%;
     /* width:1000px; */
   }
   .infodiv1{
-    width:900px;
-    font-size: 45px;
+    width:90%;
+    font-size: 20px;
     font-weight: bold;
     margin:40px;
-    height:800px;
+    height:450px;
   }
   
   .section{
-    width:900px;
-    padding-left: 25px;
+    width:90%;
+    padding-left: 5px;
+    height:4600px;
     color:blue;
-    font-size: 45px;
+    font-size: 18px;
     text-align: justify;
   }
   /* .image_div_1,.image_div_2,.gallery_div{
@@ -623,19 +625,18 @@ img {
   }
   .proffimage{
     display:block;
-    height:1550px;
-    width:1000px;
+    height:900px;
+    width:90%;
   }
   .imagediv{
-    height:600px;
-    margin: 30px;
+    height:420px;
+    /* margin: 30px; */
     border:none;
   }
   .imagediv img{
-    /* width: 600px; */
-    width:100%;
-    height:600px;
+    height:400px;
     margin-left :40%;
+    width:230px;
   }
   
   .main_div{
@@ -643,18 +644,20 @@ img {
     /* width:1000px; */
   }
   .infodiv1{
-    width:900px;
-    font-size: 45px;
+    width:100%;
+    font-size: 18px;
     font-weight: bold;
-    margin:40px;
-    height:800px;
+    height:900px;
+    margin-left: 25px;
+    margin-right:10px;
   }
   
+  
   .section{
-    width:900px;
-    padding-left: 25px;
+    width:85%;
+    padding-left: 1px;
     color:blue;
-    font-size: 45px;
+    font-size: 17px;
     text-align: justify;
   }
   /* .image_div_1,.image_div_2,.gallery_div{
