--- a/src/App.css
+++ b/src/App.css
@@ -159,48 +159,86 @@
       }
       
   }
-  @media(max-width:482px){
-    .image1 {
-      /* height: 1000px; */
-      margin-left:10%;
-      height:500px;
-      /* width:750px; */
-      width:80%;
-        border-radius: 10px;
-      }
-      .slider1 {
-        position: relative;
-        /* height: 1200px; */
-        height:600px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      .right-arrow1 {
-        position: absolute;
-        top: 50%;
-        right: 32px;
-        /* font-size: 5rem; */
-        font-size: 2rem;
-        color: white;
-        z-index: 10;
-        cursor: pointer;
-        user-select: none;
-      }
-      
-      .left-arrow1 {
-        position: absolute;
-        top: 50%;
-        left: 32px;
-        /* font-size: 5rem; */
-        font-size: 2rem;
-        color: white;
-        z-index: 10;
-        cursor: pointer;
-        user-select: none;
-      }
+  @media(max-width:768px){
+  .image {
+    /* height: 1000px; */
+    margin-left:10%;
+    height:500px;
+    /* width:750px; */
+    width:80%;
+      border-radius: 10px;
     }
-    @media(max-width:482px){
+    .slider {
+      position: relative;
+      /* height: 1200px; */
+      height:600px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .right-arrow {
+      position: absolute;
+      top: 50%;
+      right: 32px;
+      /* font-size: 5rem; */
+      font-size: 2.3rem;
+      color: white;
+      z-index: 10;
+      cursor: pointer;
+      user-select: none;
+    }
+    
+    .left-arrow {
+      position: absolute;
+      top: 50%;
+      left: 32px;
+      /* font-size: 5rem; */
+      font-size: 2.3rem;
+      color: white;
+      z-index: 10;
+      cursor: pointer;
+      user-select: none;
+    }
+  }
+  
+  /* @media(max-width:479px){
+    .image1 {
+      margin-left:10%;
+      height:500px;
+      width:80%;
+        border-radius: 10px;
+      }
+      .slider1 {
+        position: relative;
+        height:600px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .right-arrow1 {
+        position: absolute;
+        top: 50%;
+        right: 32px;
+        font-size: 2rem;
+        color: white;
+        z-index: 10;
+        cursor: pointer;
+        user-select: none;
+      }
+      
+      .left-arrow1 {
+        position: absolute;
+        top: 50%;
+        left: 32px;
+        font-size: 2rem;
+        color: white;
+        z-index: 10;
+        cursor: pointer;
+        user-select: none;
+      }
+    } */
+    
+    @media(max-width:479px){
     .image1 {
       /* height: 1000px; */
       margin-left:10%;
@@ -222,7 +260,7 @@
         top: 50%;
         right: 32px;
         /* font-size: 5rem; */
-        font-size: 2rem;
+        font-size: 2.3rem;
         color: white;
         z-index: 10;
         cursor: pointer;
@@ -234,7 +272,7 @@
         top: 50%;
         left: 32px;
         /* font-size: 5rem; */
-        font-size: 2rem;
+        font-size: 2.3rem;
         color: white;
         z-index: 10;
         cursor: pointer;
@@ -243,15 +281,16 @@
       .image {
         /* height: 1000px; */
         margin-left:10%;
-        height:400px;
+        height:500px;
         /* width:750px; */
-        width:80%;
+        width:90%;
           border-radius: 10px;
         }
         .slider {
           position: relative;
           /* height: 1200px; */
-          height:500px;
+          width:100%;
+          height:600px;
           display: flex;
           justify-content: center;
           align-items: center;
@@ -259,9 +298,9 @@
         .right-arrow{
           position: absolute;
           top: 50%;
-          right: 32px;
+          right: -2px;
           /* font-size: 5rem; */
-          font-size: 2rem;
+          font-size: 2.3rem;
           color: white;
           z-index: 10;
           cursor: pointer;
@@ -271,9 +310,9 @@
         .left-arrow {
           position: absolute;
           top: 50%;
-          left: 32px;
+          left: 24px;
           /* font-size: 5rem; */
-          font-size: 2rem;
+          font-size: 2.3rem;
           color: white;
           z-index: 10;
           cursor: pointer;
