--- a/src/App.css
+++ b/src/App.css
@@ -320,3 +320,84 @@
           user-select: none;
         }
     }
+    @media(max-width:330px){
+      .image1 {
+        /* height: 1000px; */
+        margin-left:10%;
+        height:400px;
+        /* width:750px; */
+        width:80%;
+          border-radius: 10px;
+        }
+        .slider1 {
+          position: relative;
+          /* height: 1200px; */
+          height:500px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+        .right-arrow1 {
+          position: absolute;
+          top: 50%;
+          right: 20px;
+          /* font-size: 5rem; */
+          font-size: 2.2rem;
+          color: white;
+          z-index: 10;
+          cursor: pointer;
+          user-select: none;
+        }
+        
+        .left-arrow1 {
+          position: absolute;
+          top: 50%;
+          left: 25px;
+          /* font-size: 5rem; */
+          font-size: 2.2rem;
+          color: white;
+          z-index: 10;
+          cursor: pointer;
+          user-select: none;
+        }
+        .image {
+          /* height: 1000px; */
+          margin-left:10%;
+          height:400px;
+          /* width:750px; */
+          width:90%;
+            border-radius: 10px;
+          }
+          .slider {
+            position: relative;
+            /* height: 1200px; */
+            width:100%;
+            height:500px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+          .right-arrow{
+            position: absolute;
+            top: 50%;
+            right: -2px;
+            /* font-size: 5rem; */
+            font-size: 2.1rem;
+            color: white;
+            z-index: 10;
+            cursor: pointer;
+            user-select: none;
+          }
+          
+          .left-arrow {
+            position: absolute;
+            top: 50%;
+            left: 24px;
+            /* font-size: 5rem; */
+            font-size: 2.1rem;
+            color: white;
+            z-index: 10;
+            cursor: pointer;
+            user-select: none;
+          }
+      }
