--- a/src/index.css
+++ b/src/index.css
@@ -689,7 +689,7 @@ img {
   }
   .gallery {
     width: 90%;
-    height:5100px;
+    height:5030px;
   }
   #gallerydiv {
     height: 700px;
@@ -815,6 +815,242 @@ img {
     margin: 6px;
     margin-top:4px;
     font-size: 18px;
+  }
+  .end_bar{
+      height: 100px;
+      /* width: 1000px; */
+      width:100%;
+  }
+  .logo_part {
+    height: 60px;
+    /* width: 1000px; */
+    width:100%;
+  }
+  .social_media_part {
+    width: 100%;
+    height: 170px;
+  }
+}
+@media (max-width: 330px) {
+  .flash_1 {
+    display: inline-block;
+    /* padding-left: 120px; */
+    padding-left: 70px;
+    /* padding-top: 50px; */
+    padding-top: 30px;
+    padding-bottom: 70px;
+    /* color:#fff; */
+    color: #000;
+  }
+  .flash_2 {
+    display: inline-block;
+    /* padding-left: 120px; */
+    padding-left: 70px;
+    padding-top: 50px;
+    /* padding-top: 120px; */
+    /* padding-bottom: 50px; */
+    padding-bottom: 10px;
+    /* color:#fff; */
+    color: #000;
+  }
+  #flash_inside{
+    margin-bottom:-45px;
+    margin-top: -2px;
+    font-size: 11px;
+    margin-left:-14px;
+  }
+   #flash_inside1{
+    margin-bottom:15px;
+    margin-top: -30px;
+  }
+  .proffimage{
+    display:block;
+    height:1000px;
+    width:90%;
+  }
+  .imagediv{
+    height:420px;
+    /* margin: 30px; */
+    border:none;
+  }
+  .imagediv img{
+    height:400px;
+    margin-left :40%;
+    width:250px;
+  }
+  
+  .main_div{
+    width:100%;
+    /* width:1000px; */
+  }
+  .infodiv1{
+    width:100%;
+    font-size: 18px;
+    font-weight: bold;
+    height:1000px;
+    margin-left: 25px;
+    margin-right:10px;
+  }
+  
+  
+  .section{
+    width:85%;
+    padding-left: 1px;
+    color:blue;
+    font-size: 17px;
+    text-align: justify;
+  }
+  /* .image_div_1,.image_div_2,.gallery_div{
+      display:flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-size: 100% 100%;
+ } */
+ #heading{
+   font-size: 25px;
+ }
+ .headingname{
+   font-size: 20px;
+   margin-top:120px
+ }
+  .gallery_div {
+    width: 100%;
+    height: 300px;
+    /* display:flex; */
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    /* text-align: center; */
+  }
+  .gallery {
+    width: 90%;
+    height:5350px;
+  }
+  #gallerydiv {
+    height: 700px;
+    /* width: 900px; */
+    width:90%;
+    /* margin: 20px; */
+  }
+  #paragraph {
+    width:107%;
+    font-size: 20px;
+    margin-left:3px;
+    /* margin-right:-2px; */
+  }
+  #paragraphmemo {
+    width:100%;
+    margin-left:20px;
+    /* margin-right:2px; */
+    font-size: 20px;
+    height:850px;
+  }
+  .image_div_1,
+  .image_div_2 {
+    /* width: 750px; */
+    width:100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  .img_1,
+  .img_2 {
+    margin-left: 7%;
+    /* margin-top: 50px; */
+    padding-top: 10px;
+    /* margin-bottom: 70px; */
+    margin-bottom:-25px;
+    /* width: 800px; */
+    width:100%;
+    height:400px;
+    /* height: 1000px; */
+    border: 0px;
+    border-radius: 20px;
+  }
+  #peacock {
+    /* width: 720px; */
+    width:80%;
+    /* height: 950px; */
+    height:330px;
+    margin-left: 15px;
+    border:2px solid white;
+    padding:2px;
+    /* margin-left:70px; */
+  }
+  #peacock_1 {
+    /* width: 720px; */
+    width:80%;
+    /* height: 950px; */
+    height:330px;
+    margin-left: 15px;
+    border:2px solid white;
+    padding:2px;
+  }
+
+  /* #para,
+  #para1 {
+    margin-left: 90px;
+    width: 600px;
+    font-size: 40px;
+  } */
+  #proff1 {
+    margin-top: 40px;
+    height: 100px;
+    font-size: 60px;
+  }
+  .flash_1,
+  .flash_2 {
+    display: inline-block;
+    /* font-size: 30px; */
+       font-size: 10px;
+  }
+  .top_div {
+    /* width:1000px; */
+    width: 100%;
+    height: 80px;
+    /* height:200px; */
+    display: flex;
+    /* flex-direction:column; */
+    justify-content: center;
+    font-size: 18px;
+    /* font-size: 50px;; */
+  }
+  #logo {
+    /* margin: auto; */
+    margin-left: -3px;
+    width:20%;
+  }
+  .nav_bar,
+  .info_div {
+    /* font-size: 23px;; */
+    width:80%;
+    font-size: 5px;
+    display: flex;
+    /* flex-direction: row; */
+    /* justify-content: space-around; */
+    text-align: center;
+    /* margin: auto; */
+    /* padding:30px; */
+  }
+  #logoimg{
+    height:45px;
+    margin-top:-15px;
+    border-radius: 7px;
+  }
+  .nav_hover,
+  .img_3 {
+    font-size: 11px;
+  }
+  .img_3 {
+    padding: 15px;
+  }
+  .nav_hover_1 {
+    margin: 6px;
+    margin-top:4px;
+    font-size: 15px;
   }
   .end_bar{
       height: 100px;
