--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,14 @@
 body {
   overflow-x: hidden;
 }
+.logo_part .img_3 .fa-facebook,.fa-instagram,.fa-linkedin{
+  font-size: 3rem;
+  color:#fff;
+  margin:15px;
+}
+.img_3 .fa-facebook:hover {color: rgb(0, 110, 255);}
+.img_3 .fa-instagram:hover {color: rgb(255, 0, 191);}
+.img_3 .fa-linkedin:hover {color: rgb(255, 123, 0);}
 
 .image {
   height: 500px;
@@ -227,7 +235,9 @@ img {
 }
 .logo_part {
   height: 80px;
-  background: #adbf97;
+  /* background: #adbf97; */
+  /* background:#565264; */
+  background: #000;
   /* background: grey; */
   padding: 20px;
   display: flex;
@@ -248,7 +258,9 @@ img {
 }
 .end_bar {
   height: 130px;
-  background: #adbf97;
+  /* background: #adbf97; */
+  /* background:#565264; */
+  background: #000;
   /* margin:10px */
   padding: 55px;
   display: flex;
@@ -269,9 +281,9 @@ img {
   color: whitesmoke;
 }
 .nav_hover_1 {
-  color: #000;
-  /* font-family: 'Roboto Condensed', sans-serif;
-font-family: 'Roboto Mono', monospace; */
+  color: #fff;
+  font-family: 'Roboto Condensed', sans-serif;
+font-family: 'Roboto Mono', monospace;
 }
 .nav_hover:hover {
   color: aqua;
@@ -279,7 +291,7 @@ font-family: 'Roboto Mono', monospace; */
   /* background-color: aqua; */
 }
 .nav_hover_1:hover {
-  color: whitesmoke;
+  color:aqua;
   cursor: pointer;
 }
 .proffimage{
@@ -401,6 +413,11 @@ font-family: 'Roboto Mono', monospace; */
   }
 }
 @media (max-width: 768px) {
+  .logo_part .img_3 .fa-facebook,.fa-instagram,.fa-linkedin{
+    font-size: 2rem;
+    color:#fff;
+    margin:5px;
+  }
   .flash_1 {
     display: inline-block;
     /* padding-left: 120px; */
@@ -625,6 +642,11 @@ font-family: 'Roboto Mono', monospace; */
   }
 }
 @media (max-width: 479px) {
+  .logo_part .img_3 .fa-facebook,.fa-instagram,.fa-linkedin{
+    font-size: 2rem;
+    color:#fff;
+    margin:5px;
+  }
   .flash_1 {
     display: inline-block;
     /* padding-left: 120px; */
@@ -860,6 +882,12 @@ font-family: 'Roboto Mono', monospace; */
   }
 }
 @media (max-width: 330px) {
+  .logo_part .img_3 .fa-facebook,.fa-instagram,.fa-linkedin{
+    font-size: 1.5rem;
+    color:#fff;
+    margin:7px;
+  }
+  
   .flash_1 {
     display: inline-block;
     /* padding-left: 120px; */
@@ -1203,9 +1231,7 @@ nav .logo {
       padding: 12px;
   }
 }
-/* .img_3 .fa-facebook,.fa-instagram,.fa-linkedin{
-  font-size: 3rem;
-} */
+
 
 
 
