--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,32 @@
 body {
   overflow-x: hidden;
 }
+.end_bars{
+  background: #000;
+  color:#fff;
+  justify-content: space-around;
+  text-align: justify;
+  display:flex;
+  /* flex-direction: row; */
+  /* justify-content: space-evenly; */
+  
+}
+.end_bars_inside{
+  /* text-align: left;
+  margin-left: 50px;
+  margin-bottom: 20px; */
+
+}
+.end_bars_inside_1{
+  /* margin-right: -50px;
+  margin-top:-40px;
+  text-align: right;
+  margin-right: 0px;
+  margin-bottom: 20px; */
+
+
+}
+
 .logo_part .img_3 .fa-facebook,.fa-instagram,.fa-linkedin{
   font-size: 3rem;
   color:#fff;
@@ -251,6 +277,7 @@ img {
 .img_3 {
   margin: 20px;
 }
+
 .img_3 img:hover {
   cursor: pointer;
   box-shadow: 10px 20px 18px -18px rgba(0, 0, 0, 1);
@@ -281,7 +308,7 @@ img {
   color: whitesmoke;
 }
 .nav_hover_1 {
-  color: #fff;
+  color: orange;
   font-family: 'Roboto Condensed', sans-serif;
 font-family: 'Roboto Mono', monospace;
 }
@@ -1231,6 +1258,174 @@ nav .logo {
       padding: 12px;
   }
 }
+
+*, *:after, *:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  }
+  body{
+  margin:0;
+  overflow-x:hidden !important;
+  box-sizing:border-box;
+  font-family: 'Source Sans Pro', sans-serif;
+  }
+  
+  
+  a{
+  text-decoration:none;
+  outline:none !important;
+  color:#fff;
+  }
+  
+  .border-shape {
+  background: #ffbe00 none repeat scroll 0 0;
+  color: #fff;
+  display: block;
+  height: 3px;
+  left: 0;
+  margin: 20px auto;
+  position: relative;
+  right: 0;
+  text-align: center;
+  top: 0;
+  width: 80px;
+  }
+  
+  .border-shape::before {
+  background: #ffbe00 none repeat scroll 0 0;
+  bottom: 0;
+  content: "";
+  height: 1px;
+  left: 80px;
+  margin: 0 auto;
+  position: absolute;
+  text-align: center;
+  top: 1px;
+  width: 100px;
+  }
+  
+  .border-shape::after {
+  background: #ffbe00 none repeat scroll 0 0;
+  bottom: 0;
+  content: "";
+  height: 1px;
+  margin: 0 auto;
+  position: absolute;
+  right: 80px;
+  text-align: center;
+  top: 1px;
+  width: 100px;
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  /*FOOTER*/
+  footer{
+  width:100%;
+  background-color:#121619;
+  color:#fff;
+  }
+  
+  .top_header{
+  padding:2rem;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  position:relative;
+  }
+  
+  .top_header section{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  width:100%;
+  }
+  
+  .top_header span{
+  padding:0 1rem;
+  }
+  
+  .top_header .fa{
+  color:#ffbe00;
+  font-size:35px;
+  }
+  
+  footer .border-shape {
+  width: 40%;
+  }
+  
+  footer .border-shape::before {
+  width: 100%;
+  left:120px;
+  }
+  
+  footer .border-shape::after {
+  width: 100%;
+  right:120px;
+  }
+  
+  footer .bottom_content section{
+  padding:1.5rem 2rem;
+  display:flex;
+  align-items:center;
+  justify-content:Center;
+  }
+  
+  .bottom_content a{
+  margin:0 20px;
+  color:rgba(255,255,255,0.7);
+  transition:0.5s;
+  }
+  
+  .bottom_content a:hover{
+  color:rgba(255,255,255,1);
+  }
+  
+  
+  .copyright{
+  padding:0.8em 0;
+  background-color:#1e1e1e;
+  text-align:center;
+  color:rgba(255,255,255,0.7);
+  font-size:12px;
+  }
+  
+  
+  
+  @media (max-width:820px){
+  .top_header{
+  padding:1rem;
+  display:block;
+  }
+  
+  .top_header section{
+  margin:40px 0;
+  align-items:left;
+  justify-content:left;
+  }
+  footer .bottom_content section{
+  padding:1rem;
+  display:block;
+  }
+  footer .bottom_content section a{
+  padding:1rem;
+  font-size:12px;
+  margin:0 5px;
+  display:inline-block;
+  }
+  }
+  
+  
+  
 
 
 
