--- a/src/index.css
+++ b/src/index.css
@@ -205,6 +205,7 @@ img {
   /* color:#fff; */
   color: #000;
 }
+
 .gallery_div {
   width: 100%;
   height: 500px;
@@ -1504,7 +1505,9 @@ display:inline-block;
 
 .our-webcoderskull{
 background: url("http://www.webcoderskull.com/img/right-sider-banner.png") no-repeat center top / cover;
-
+}
+#candy{
+  background: url("https://image.freepik.com/free-photo/handmade-ceramics-empty-craft-ceramic-plates-bowls-light-background-top-view-border_233226-427.jpg") no-repeat center top / cover;
 }
 .our-webcoderskull .cnt-block{ 
  float:left; 
