--- a/src/index.css
+++ b/src/index.css
@@ -76,6 +76,8 @@ body {
   /* background-image:url("https://thumbs.gfycat.com/ForkedInexperiencedGrouse.webp"); */
   /* background-image: url("https://i.pinimg.com/originals/62/39/4d/62394d753859943e6a1a36443ef78795.gif"); */
   /* background-image:url("https://camo.githubusercontent.com/65475c61a0b084c0f8aafef3cef5585752f6771b326c33a3a8c70e020c4afe6d/68747470733a2f2f692e70696e696d672e636f6d2f6f726967696e616c732f33302f62382f31372f33306238313734633666316130376530616639626366343166656333613566352e676966"); */
+  /* background-image: url("https://media-exp1.licdn.com/dms/image/C4D1BAQHhGGMrYl6tug/company-background_10000/0/1519797023317?e=2159024400&v=beta&t=7kmn1ROHsUcOCEZ0iPFjqoFZcTpc9xhPqUFg1-MzHJg"); */
+  /* background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRehLRJMJ33cEekk4akMAYKqPmKiE3AOaHEioKlU4QF9DjiMC5wl_eeKsYvLeVnnZX6LqI&usqp=CAU"); */
   background-repeat: no-repeat;
   background-size: 100% 100%;
   overflow-x: hidden;
@@ -118,7 +120,7 @@ body {
   justify-content: space-between;
   /* box-shadow:20px 30px 28px -18px rgba(0,0,0,0.6); */
 }
-.gallery {
+.gallery,.gallery_placement {
   height: 1600px;
   width: 100%;
 }
@@ -219,6 +221,20 @@ img {
   background-repeat: no-repeat;
   background-color: rgba(0, 0, 0, 0.7);
   background-blend-mode: darken;
+}
+.gallery_div_placement {
+  width: 100%;
+  height: 500px;
+  /* background:#FAFCEE; */
+  display: flex;
+  justify-content: center;
+  background-image: url("images/placement.jpeg");
+  background-size: 100% 100%;
+  overflow-x: hidden;
+  object-fit: contain;
+  background-repeat: no-repeat;
+  /* background-color: rgba(0, 0, 0, 0.7); */
+  /* background-blend-mode: darken; */
 }
 /* #onion {
   border-radius: 0;
@@ -438,11 +454,15 @@ img {
   .top_div {
     width: 1000px;
   }
-  .gallery_div {
+  .gallery_div,.gallery_div_placement {
     width: 1000px;
     height: 450px;
   }
   .gallery {
+    width: 1000px;
+    height: 2200px;
+  }
+  .gallery_placement{
     width: 1000px;
     height: 2200px;
   }
@@ -452,7 +472,7 @@ img {
     margin: 20px;
   }
   .social_media_part {
-    width: 1000px;
+    width: 100%;
     height: 200px;
   }
   #paragraph {
@@ -554,7 +574,7 @@ img {
     font-size: 25px;
     margin-top: 120px;
   }
-  .gallery_div {
+  .gallery_div,.gallery_div_placement {
     width: 100%;
     height: 300px;
     /* display:flex; */
@@ -565,6 +585,10 @@ img {
   .gallery {
     width: 90%;
     height: 3000px;
+  }
+  .gallery_placement{
+    width: 90%;
+    height: 1600px;
   }
   #gallerydiv {
     height: 600px;
@@ -785,7 +809,7 @@ img {
     font-size: 25px;
     margin-top: 120px;
   }
-  .gallery_div {
+  .gallery_div,.gallery_div_placement {
     width: 100%;
     height: 300px;
     /* display:flex; */
@@ -797,6 +821,10 @@ img {
     width: 90%;
     height: 3400px;
   }
+  /* .gallery_placement{
+    width: 90%;
+    height: 3400px;
+  } */
   #gallerydiv {
     height: 820px;
     /* width: 900px; */
@@ -1028,7 +1056,7 @@ img {
     font-size: 20px;
     margin-top: 120px;
   }
-  .gallery_div {
+  .gallery_div,.gallery_div_placement {
     width: 100%;
     height: 300px;
     /* display:flex; */
@@ -1040,6 +1068,10 @@ img {
     width: 90%;
     height: 4050px;
   }
+  /* .gallery_placement {
+    width: 90%;
+    height: 4050px;
+  } */
   #gallerydiv {
     height: 1150px;
     /* width: 900px; */
@@ -1425,6 +1457,7 @@ footer .bottom_content section {
 }
 
 @media (max-width: 820px) {
+  
   .top_header {
     padding: 1rem;
     display: block;
