--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@ body {
 .headingname {
   /* margin-top:40%; */
   /* padding-top:60px; */
-  margin-top: 160px;
+  margin-top: 60px;
   color: rgb(236, 183, 10);
   font-size: 50px;
 }
@@ -217,6 +217,7 @@ img {
   display: flex;
   justify-content: center;
   background-image: url("images/imgb.png");
+  background-size: 100% 100%;
   /* background-image: url('https://images.pexels.com/photos/167491/pexels-photo-167491.jpeg?auto=compress&cs=tinysrgb&h=650&w=940') no-repeat center center fixed;  */
   background-size: 100% 100%;
   overflow-x: hidden;
