--- a/src/index.css
+++ b/src/index.css
@@ -332,7 +332,7 @@ img {
   width: 100%;
   height: 500px;
   justify-content: center;
-  background-image: url("images/CSS.jpeg");
+  background-image: url("images/ICS.jpeg");
   background-size:cover ;
 }
 .gallery_div_placement {
