--- a/src/index.css
+++ b/src/index.css
@@ -323,9 +323,9 @@ img {
 
 .gallery_div {
   width: 100%;
-  height: 500px;
+  height: 550px;
  
-  background-image: url("images/imgb.png");
+  background-image: url("images/imgb2.jpg");
   background-size:  cover;
   
   overflow-x: hidden;
